Add without_quality response
