# src/middlewares/errorHandler/functions/sendErrorModel.ts
@@ -3,6 +3,6 @@ import ErrorResponse from "../../../models/response/errors/errorResponse";
 import { Response } from "express";
 
 export default function sendErrorModel(res: Response, errorModel: ErrorModel) {
-    const errorResponse = new ErrorResponse(errorModel);
+    const errorResponse = ErrorResponse.fromErrorModel(errorModel);
     return res.status(errorModel.statusCode).json(errorResponse);
 }
